[TW#25902962] Fixed flicker of subcategories on initial load

--- a/modules/ecommerce/public/assets/styles/ecommerce.css
+++ b/modules/ecommerce/public/assets/styles/ecommerce.css
@@ -833,7 +833,7 @@ ins-carousel .product-cards .placeholder-img {
 ins-drawer#mobile-menu .menu li>a,
 ins-drawer#mobile-menu .ins-accordion-item>.ins-accordion-item_header>.inner-head,
 ins-drawer#mobile-menu .menu .ins-accordion-item_content .ins-accordion-link>a {
-    padding: 16px 24px;
+    padding: 16px 24px !important;
     line-height: 34px;
 }
 
@@ -866,7 +866,7 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .ins-accordion-link>a {
 }
 
 #mobile-filter-drawer ins-accordion a span {
-    padding: 0px;
+    padding: 0px !important;
 }
 
 #mobile-filter-drawer a span {
@@ -977,6 +977,9 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
 /* Sidebar Categories */
 
 #sidebar-categories {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
     background: var(--color-ui-02);
     padding: 24px 16px;
 }
@@ -1011,15 +1014,27 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
 #mega-menu a:hover,
 #sidebar-categories .ui-sidebar:hover,
 #sidebar-categories .ins-accordion-item>.ins-accordion-item_header>.inner-head a:hover,
-#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a:hover {
+#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a:hover,
+#sidebar-categories .ins-accordion-item_content .inner-content a:hover  {
     color: var(--color-main);
     text-decoration: none;
 }
 
 #sidebar-categories>a,
 #sidebar-categories>.inner-head,
-#sidebar-categories .ins-accordion-item_header>.inner-head {
-    padding: 12px 16px;
+#sidebar-categories .ins-accordion-item_header>.inner-head,
+#sidebar-categories .ins-accordion-item_content .ins-accordion-link_link {
+    padding: 12px 16px !important;
+    line-height: 24px;
+}
+
+#sidebar-categories .ins-accordion-item_content .inner-content a {
+    padding-left: 32px !important;
+    color: var(--font-color-body);
+    font-family: var(--font-family-02);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 #sidebar-categories .ins-accordion-item_header>.inner-head a {
@@ -1035,7 +1050,8 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
 #sidebar-categories .ins-accordion-item>.ins-accordion-item_header>.inner-head,
 #sidebar-categories .ins-accordion-item>.ins-accordion-item_header>.inner-head a,
 #sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head,
-#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a {
+#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a,
+#sidebar-categories .ins-accordion-link {
     background: transparent;
 }
 
@@ -1046,7 +1062,8 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
 #sidebar-categories .ins-accordion-item>.ins-accordion-item_header>.inner-head,
 #sidebar-categories .ins-accordion-item>.ins-accordion-item_header>.inner-head a,
 #sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head,
-#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a {
+#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a,
+#sidebar-categories .ins-accordion-item_content .ins-accordion-link {
     border: none;
     box-shadow: none;
     text-decoration: none;
@@ -1059,7 +1076,8 @@ ins-drawer#mobile-menu .menu .ins-accordion-item_content .sign-out-wrapper {
 }
 
 #sidebar-categories a.active .ui-sidebar,
-#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a {
+#sidebar-categories .ins-accordion-item.open>.ins-accordion-item_header>.inner-head a,
+#sidebar-categories .ins-accordion-item_content .inner-content ins-accordion-link.active a {
     color: var(--color-main);
     font-weight: 700;
 }
